--- a/ex02/Exercise 2 Jonas.ipynb
+++ b/ex02/Exercise 2 Jonas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 485,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 486,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 487,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 488,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 489,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 490,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 491,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,16 +137,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 492,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f0e956f75e0>"
+       "<matplotlib.collections.PathCollection at 0x7f0e94dcc5b0>"
       ]
      },
-     "execution_count": 433,
+     "execution_count": 492,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 493,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,16 +199,12 @@
     "\n",
     "    distances = dist_vec(test_features, mean)\n",
     "\n",
-    "    return np.array([labels[np.argmin(distance)] for distance in distances])\n",
-    "\n",
-    "\n",
-    "\n",
-    "        "
+    "    return np.array([labels[np.argmin(distance)] for distance in distances])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 494,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 495,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +255,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 496,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.144927536231885"
+      ]
+     },
+     "execution_count": 496,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum((predicted_labels != test_labels)) / test_labels.size * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 497,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 498,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 499,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,16 +313,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 500,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f0e9591c790>"
+       "<matplotlib.collections.PathCollection at 0x7f0e95317ee0>"
       ]
      },
-     "execution_count": 440,
+     "execution_count": 500,
      "metadata": {},
      "output_type": "execute_result"
     },
